# haofreedom

./: .gitignore  boundary_detection_2D.py  boundary_draw.py  boundry_draw.py  boundry_draw_hed.py  dataconfig.txt  learn_pillow.py  map3Dto2D.py  map3Dto2DwithTriangles.py  parameters.json  readme.md  simple_example.py  world_points_cal.py
denseCRF/: LICENSE.md  evaluation_framework.py  merge_plys.py  plys.json  readme.md  save_npz_and_visualize_click_area.py  try_get_parameters.py
pcd_ply_view/: CMakeLists.txt  my_ply_pcd_visualization.cpp  readme.md
playback_ubuntu/: Makefile  PlaybackSync.cpp  playback  readme
